--- a/labs/01/.vscode/settings.json
+++ b/labs/01/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\kopi\\Anaconda3\\envs\\tf-env\\python.exe"
+    "python.pythonPath": "C:\\ProgramData\\Miniconda3\\python.exe"
 }
